--- a/Django04/src/templates/myapp/index.html
+++ b/Django04/src/templates/myapp/index.html
@@ -5,10 +5,30 @@
     <title>Title</title>
 </head>
 <body>
-    <form action="{% url 'index' %}" method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-    <input type="submit" value="Submit">
-    </form>
+
+    {% if user.is_authenticated %}
+        <a href="{% url 'logout' %}">Logout</a>
+    {% else %}
+        <a href="{% url 'login' %}">Login</a>
+    {% endif %}
+
+    <p>
+        {% if user.is_authenticated %}
+            <h3>Current user is:</h3>
+            {{ user.username }}
+        {% else %}
+            Please login!
+        {% endif %}
+    </p>
+    <br>
+
+    <a href="{% url 'search' %}">Search article by text</a>
+
+    <h2>Articles:</h2>
+    {% for article in articles %}
+        <p>Article by {{ article.author }}, {{ article.created_at }} . Genre is {{ article.genre }}</p>
+        <p>{{ article.text }}</p>
+        <hr>
+    {% endfor %}
 </body>
 </html>
