--- a/Django04/src/templates/myapp/search.html
+++ b/Django04/src/templates/myapp/search.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Login</title>
+    <title>Title</title>
 </head>
 <body>
-    <form action="{% url 'login' %}" method="post">
+    <form method="get">
         {% csrf_token %}
         {{ form.as_p }}
-    <input type="submit" value="Submit">
+        <button type="submit">Search</button>
     </form>
-    <br>
 
     <a href="{% url 'index' %}">Home</a>
 </body>
