--- a/Django05/newapp/django_project/templates/myapp/animal_create.html
+++ b/Django05/newapp/django_project/templates/myapp/animal_create.html
@@ -1,14 +1,15 @@
-{%  extends 'blog/base.html' %}
+{%  extends 'myapp/base.html' %}
 
 {% block content %}
 
-    <form method="post ">
+    <form method="post">
+        {% csrf_token %}
         <fieldset>
             <legend>New Animal</legend>
             {{ form.as_p }}
         </fieldset>
-        {% csrf_token %}
-        <button type="submit">Create</button>
+
+        <button type="submit">Create</button>>
     </form>
     <br>
 
