--- a/Django04/src/templates/myapp/index.html
+++ b/Django04/src/templates/myapp/index.html
@@ -7,28 +7,43 @@
 <body>
 
     {% if user.is_authenticated %}
-        <a href="{% url 'logout' %}">Logout</a>
+        <p><a href="{% url 'logout' %}">Logout</a></p>
+        <p><a href="{% url 'pass-change' %}">Change password</a></p>
     {% else %}
         <a href="{% url 'login' %}">Login</a>
+        <a href="{% url 'login' %}">Register</a>
     {% endif %}
 
     <p>
         {% if user.is_authenticated %}
             <h3>Current user is:</h3>
             {{ user.username }}
+            <h2>Search article by text</h2>
+            <form action="{% url 'search' %}" method="get">
+                {% csrf_token %}
+                {{ form.as_p }}
+                <button type="submit">Search</button>
+            </form>
         {% else %}
             Please login!
         {% endif %}
     </p>
     <br>
 
-    <a href="{% url 'search' %}">Search article by text</a>
 
     <h2>Articles:</h2>
     {% for article in articles %}
         <p>Article by {{ article.author }}, {{ article.created_at }} . Genre is {{ article.genre }}</p>
+        <a href="{{ article.get_absolute_url }}">Link to article</a>
         <p>{{ article.text }}</p>
         <hr>
     {% endfor %}
+
+    <h2>Article create</h2>
+    <form action="{% url 'article-create' %}" method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Create article</button>
+    </form>
 </body>
 </html>
