--- a/Django06/src/templates/note/shared_notes.html
+++ b/Django06/src/templates/note/shared_notes.html
@@ -5,7 +5,13 @@
     <title>Home</title>
 </head>
 <body>
-
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
 
     <p><a href="{% url 'note:note-list' %}">Home</a></p>
     <p><a href="{% url 'logout' %}">Logout</a></p>
