--- a/Django06/src/templates/user/register.html
+++ b/Django06/src/templates/user/register.html
@@ -5,6 +5,14 @@
     <title>Registration</title>
 </head>
 <body>
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
+
     <h2>Registration:</h2>
     <form method="post">
         {% csrf_token %}
