--- a/projects/cinema/src/templates/films/film/create.html
+++ b/projects/cinema/src/templates/films/film/create.html
@@ -3,7 +3,7 @@
 {% block content %}
     <div id="main">
         <h1>Create Film:</h1>
-        <form method="post">
+        <form method="post" enctype='multipart/form-data'>
             {% csrf_token %}
             {{ form.as_p }}
             <input type="submit" value="Create">
