--- a/projects/cinema/src/templates/tickets/ticket/list.html
+++ b/projects/cinema/src/templates/tickets/ticket/list.html
@@ -3,9 +3,10 @@
 
 {% block content %}
     <div id="main">
-        <h2>Total cost: ${{ total_cost }}</h2>
-        <br>
+
         <h2>Tickets</h2>
+        <h6>Total cost: ${{ user.profile.total_cost }}</h6>
+        <hr>
         {% for session in buyer_sessions %}
             <div class="session">
                 <p>Session: {{ session }}</p>
