--- a/projects/tasks/src/templates/base.html
+++ b/projects/tasks/src/templates/base.html
@@ -14,13 +14,14 @@
         </ul>
     {% endif %}
 
+    {% block navigation %}
+    {% endblock navigation %}
 
-
-    {% include 'navigation.html' %}
     {% if user.is_authenticated %}
         <h2>Hi {{ user.username }}{% if user.is_superuser %} (Admin){% endif %}!</h2>
+        <hr>
     {% endif %}
-    <hr>
+
     <div>
         {% block content %}
         {% endblock %}
