finished helpdesk app

--- a/projects/helpdesk/src/templates/request/list.html
+++ b/projects/helpdesk/src/templates/request/list.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     {% if user.is_superuser %}
-        <a href="{%  url 'requests:rerequest-list' %}">Re Requests</a>
+        <a href="{%  url 'requests:rerequest-list-home' %}">Re Requests</a>
     {% endif %}
     <hr>
 
